Update Commit - Medications services completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,11 @@ spring.h2.console.enabled=true
 
 spring.sql.init.mode=always
 
+#Multipart
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+
 app.title=Drones
 app.rows-per-page=5
