Update Commit - Periodic task & logging completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.servlet.context-path=/
 server.port=8080
 
 logging.level.web=debug
+logging.file.path=./data/logs
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -22,3 +23,5 @@ spring.servlet.multipart.max-request-size=215MB
 
 app.title=Drones
 app.rows-per-page=5
+
+cron.expression=0 * * ? * *
